--- a/OgreStack.csproj
+++ b/OgreStack.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ProcessAbstract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\CuprosDrinks.cs" />
+    <Compile Include="Support\ExpandedWoodworking.cs" />
     <Compile Include="Support\GeneticRim.cs" />
     <Compile Include="Support\MedievalTimes.cs" />
     <Compile Include="Support\RimWorld.cs" />
