--- a/1.4/OgreStack.csproj
+++ b/1.4/OgreStack.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Models\CategorySetting.cs" />
     <Compile Include="Models\Mode.cs" />
     <Compile Include="Models\Preset.cs" />
+    <Compile Include="Models\StonePile.cs" />
     <Compile Include="OgreStackMod.cs" />
     <Compile Include="PersistentData\Presets.cs" />
     <Compile Include="PersistentData\Settings.cs" />
